caso3/infra-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: ruggeriml-dev
  labels:
    run: db-sts
spec:
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
  selector:
    run: db-sts

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: ruggeriml-dev
  name: db-sts
  labels:
    run: db-sts
spec:
  replicas: 1
  selector:
    matchLabels:
      run: db-sts
  serviceName: "db-sts"

  template:
    metadata:
      labels:
        run: db-sts
    spec:
      containers:
      - name: wp-sitio-db
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: mysql

        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        - name: init-sql
          mountPath: /docker-entrypoint-initdb.d
          readOnly: true

      volumes:
      - name: init-sql
        emptyDir: {}
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-data

  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
